--- a/package.json
+++ b/package.json
@@ -1,1 +1,1 @@
-{"name":"gerencia-contas-backend","version":"1.0.0","main":"server.js","scripts":{"start":"node server.js"},"dependencies":{"cors":"^2.8.5","express":"^4.21.2","mysql":"^2.18.1","mysql2":"^3.3.0"}}
+{"name":"gerencia-contas-backend","version":"1.0.0","main":"server.js","scripts":{"start":"node server.js"},"dependencies":{"cors":"^2.8.5","dotenv":"^17.2.3","express":"^4.21.2","mysql":"^2.18.1","mysql2":"^3.15.3"}}
